--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports:
     magrittr,
     dplyr
 RoxygenNote: 7.1.1
+URL: https://github.com/davidmaciel/sanr
+BugReports: https://github.com/davidmaciel/sanr/issues
