--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,18 +2,26 @@ Package: sanr
 Type: Package
 Title: A research compedium about SAN (Segurança Alimentar e Nutricional)
 Version: 0.1.0
-Author: David Maciel de Mello Neto (aut)
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: person("Mello Neto", "David", email = "davidmaciel2206@gmail.com",
+    role = c("aut", "cre""))
+Maintainer: David Maciel de Mello Neto <davidmaciel2206@gmail.com>
+Description: Documents the research project about SAN, in order to make it reproductible.
+License: CC BY 4.0
 Encoding: UTF-8
 LazyData: true
 Imports: 
     readr,
     lubridate,
     magrittr,
-    dplyr
+    dplyr,
+    purrr,
+    rvest,
+    microdadosBrasil,
+    survey,
+    scales,
+    cowplot
 RoxygenNote: 7.1.1
 URL: https://github.com/davidmaciel/sanr
 BugReports: https://github.com/davidmaciel/sanr/issues
+Depends: 
+    R (>= 2.10)
